Fix bug slider image display on Firefox

--- a/src/pages/index-css-modules.module.css
+++ b/src/pages/index-css-modules.module.css
@@ -105,7 +105,7 @@ h1{
 	height: 100%;
 }
 .slidesImageContainer{
-	max-width:50%;
+	width:50%;
 	height:100%;
 	display:flex;
 	align-items:center;
@@ -114,6 +114,12 @@ h1{
 .slidesImageContainerImage{
 	max-width:500px;
 	max-height:500px;
+}
+@media (max-width: 1200px){
+	.slidesImageContainerImage{
+		max-width:400px;
+		max-height:400px;
+	}
 }
 .sliderDot{
 	background:#fff;
